HPCDATAMGM-1930: The search box text is preserved when going to other pages

--- a/src/hpc-web/src/main/resources/templates/collectionsearchresultdetail.html
+++ b/src/hpc-web/src/main/resources/templates/collectionsearchresultdetail.html
@@ -800,6 +800,7 @@ window.onclick = function(event) {
 						<input type="hidden" id="queryName1" name="queryName"/>
 						<input type="hidden" id="totalSize1" name="totalSize"/>
 						<input type="hidden" id="deselectedColumns1" name="deselectedColumns" value=""/>
+						<input type="hidden" id="globalMetadataSearchText1" name="globalMetadataSearchText"/>
 					</form>
 					<form class="form-horizontal" id="bulkPermissionsform" action="#"
 						role="form" th:action="@{/bulkpermissions}" 
@@ -812,6 +813,7 @@ window.onclick = function(event) {
 						<input type="hidden" id="queryName2" name="queryName"/>
 						<input type="hidden" id="totalSize2" name="totalSize"/>
 						<input type="hidden" id="deselectedColumns2" name="deselectedColumns" value=""/>
+						<input type="hidden" id="globalMetadataSearchText2" name="globalMetadataSearchText"/>
 					</form> 
 					<form class="form-horizontal" id="bulkMetadataform" action="#"
 						role="form" th:action="@{/bulkupdatemetadata}"
@@ -826,6 +828,7 @@ window.onclick = function(event) {
 						<input type="hidden" id="totalCount" name="totalCount"/>
 						<input type="hidden" id="updateAll" name="updateAll"/>
 						<input type="hidden" id="deselectedColumns3" name="deselectedColumns" value=""/>
+						<input type="hidden" id="globalMetadataSearchText3" name="globalMetadataSearchText"/>
 					</form>
 					<form class="form-horizontal" id="editsearchform" action="#"
 						role="form" th:action="@{/editSearch}" th:object="${hpcSearch}"
@@ -867,7 +870,6 @@ window.onclick = function(event) {
 	$('#searchInput').keypress(function(event) {
 	    if (event.which === 13) {
 	      event.preventDefault();
-	      document.getElementById("simplesearchform").elements.namedItem("globalMetadataSearchText").value =  this.value;
 	      globalMetadataSearchText = this.value;
 		  updatePage('first', currentPageSize);
 	    }
@@ -924,7 +926,7 @@ window.onclick = function(event) {
 	    			updatedList.push(selectedRowsData[i]);
 	    	}
     	}
-		
+		document.getElementById("simplesearchform").elements.namedItem("globalMetadataSearchText").value =  globalMetadataSearchText;
 		document.getElementById("simplesearchform").elements.namedItem("queryName").value = queryName;
 		document.getElementById("simplesearchform").elements.namedItem("selectedFilePaths").value = updatedList;
 		document.getElementById("simplesearchform").elements.namedItem("deselectedColumns").value = deselectedColumns;
