--- a/src/hpc-web/src/main/resources/templates/collectionsearchresultdetail.html
+++ b/src/hpc-web/src/main/resources/templates/collectionsearchresultdetail.html
@@ -737,7 +737,7 @@ window.onclick = function(event) {
 											Collections: <strong id="totalSizeDisplay"></strong>
 										</label>
 									</div>
-									<div class="pull-right">
+									<div class="pull-right" id="searchInputDiv">
 										<div class="btn-group">
 											<label>Search Metadata&nbsp;&nbsp;<input type="search"
 												name="globalMetadataSearchText" id="searchInput"
@@ -864,6 +864,10 @@ window.onclick = function(event) {
 			$('#hideExportLink').hide(); 
 		} else {
 			$('#showExportLink').hide(); 
+		}
+		if(source == "'search'" || source == 'search'){
+			// If NamedQuery, hide the search box
+			$('#searchInputDiv').hide(); 
 		}
 	});
 	
