--- a/src/hpc-web/src/main/resources/templates/collectionsearchresultdetail.html
+++ b/src/hpc-web/src/main/resources/templates/collectionsearchresultdetail.html
@@ -26,6 +26,8 @@
 <link th:href="@{~/css/style-responsive.css}" rel="stylesheet" />
 <link th:href="@{~/css/xcharts.min.css}" rel=" stylesheet" />
 <link th:href="@{~/css/jquery-ui-1.10.4.min.css}" rel="stylesheet" />
+<!-- Search styles -->
+<link rel="stylesheet" href="css/search.css" th:href="@{/css/search.css}"/>
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 -->
 <!--[if lt IE 9]>
       <script th:src="@{~/js/html5shiv.js}"></script>
@@ -72,74 +74,6 @@
    
 /*]]>*/
 </script>
-<style>
-.dropbtn {
-  background-color: transparent;
-  color: #007aff;
-  padding: 12px;
-  font-size: 12px;
-  border: none;
-  cursor: pointer;
-}
-
-.dropbtn:hover, .dropbtn:focus {
-  background-color: #2980B9;
-  color: white
-}
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 148px;
-  overflow: auto;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown a:hover {background-color: #97BDD6;}
-
-.isDisabled {
-  cursor: not-allowed;
-  opacity: 0.5;
-}
-.isDisabled > a {
-  color: currentColor;
-  display: inline-block;  /* For IE11/ MS Edge bug */
-  pointer-events: none;
-  text-decoration: none;
-}
-
-.show {display: block;}
-
-#searchInput {
-    width: 200px;
-}
-#searchClear {
-    position: absolute;
-    right: 5px;
-    top: 0;
-    bottom: 0;
-    height: 14px;
-    margin: auto;
-    font-size: 14px;
-    cursor: pointer;
-    color: #ccc;
-}
-</style>
 
 <script>
 //<![CDATA[
@@ -867,7 +801,7 @@ window.onclick = function(event) {
 		}
 		if(source == "'search'" || source == 'search'){
 			// If NamedQuery, hide the search box
-			$('#searchInputDiv').hide(); 
+			$('#searchInputDiv').hide();
 		}
 	});
 	
