HPCDATAMGM-1948: Add Swagger link

--- a/src/hpc-web/src/main/resources/templates/header.html
+++ b/src/hpc-web/src/main/resources/templates/header.html
@@ -42,7 +42,7 @@
 						class="topNav-item">Help</span></a>
 					<ul class="dropdown-menu extended logout">
 						<div class="log-arrow-up"></div>
-						<li><a href="https://github.com/CBIIT/HPC_DME_APIs/blob/master/doc/guides/HPC_API_Specification.docx" target="_blank"><i class="icon_key_alt"></i> API Documentation</a></li>
+						<li><a href="/swagger-ui/4.14.0/index.html" target="_blank"><i class="icon_key_alt"></i> API Documentation</a></li>
 						<li class="eborder-top"><a href="https://wiki.nci.nih.gov/display/DMEdoc" target="_blank"><i class="icon_book_alt"></i> User Guide</a></li>
 						<li class="eborder-top"><a href="https://wiki.nci.nih.gov/display/DMEdoc/Frequently+Asked+Questions" target="_blank"><i class="icon_book_alt"></i> Frequently Asked Questions</a></li>
 						<li><a href="https://github.com/CBIIT/HPC_DME_APIs" target="_blank"><i class="icon_key_alt"></i> DME Site on GitHub</a></li>
