--- a/src/hpc-web/src/main/resources/templates/downloadfiles.html
+++ b/src/hpc-web/src/main/resources/templates/downloadfiles.html
@@ -51,6 +51,7 @@
 <script th:inline="javascript">
 /*<![CDATA[*/
     var selectedPaths = [[${hpcDownloadDatafile.getSelectedPaths()}]];
+    var globalMetadataSearchText = [[${hpcDownloadDatafile.getGlobalMetadataSearchText()}]];
 /*]]>*/
 </script>
 <style>
@@ -326,6 +327,8 @@
 						th:value="${hpcDownloadDatafile.getSelectedPaths()}" />
 					<input type="hidden" name="transferType" id="transferType"
 						th:value="${transferType}" />
+					<input type="hidden" name="globalMetadataSearchText" id="globalMetadataSearchText"
+						th:value="${hpcDownloadDatafile.getGlobalMetadataSearchText()}" />
 				</div>
 			</div>
 		</form>
@@ -351,6 +354,8 @@
 				 th:value="${hpcSearch.getTotalSize()}"/>
 			<input type="hidden"
 				class="form-control" name="deselectedColumns" id="deselectedColumnsId"/>
+			<input type="hidden"
+				class="form-control" name="globalMetadataSearchText" id="globalMetadataSearchText" th:value="${globalMetadataSearchText}"/>
 		</form>
 		<form class="form-horizontal" id="searchForm"
 			th:object="${hpcSearch}" method="POST" th:action="@{/search}">
@@ -365,6 +370,8 @@
 				 th:value="${hpcSearch.getTotalSize()}"/>
 			<input type="hidden"
 				class="form-control" name="deselectedColumns" id="deselectedColumns"/>
+			<input type="hidden"
+				class="form-control" name="globalMetadataSearchText" id="globalMetadataSearchText" th:value="${globalMetadataSearchText}"/>
 		</form>
 						</div>
 				</div>
