--- a/src/hpc-web/src/main/resources/templates/collectionsearchresultdetail.html
+++ b/src/hpc-web/src/main/resources/templates/collectionsearchresultdetail.html
@@ -678,7 +678,7 @@ window.onclick = function(event) {
 									<div class="pull-right" id="searchInputDiv">
 										<div class="btn-group">
 											<label
-												title="Enter text followed by carriage return. All the Metadata columns(except Path) in all the pages will be searched.">
+												title="Type text and press Enter. DME searches all columns except Path in all search result pages.">
 												Search Metadata&nbsp;&nbsp;<input type="search"
 												name="globalMetadataSearchText" id="searchInput"
 												style="height: 30px" th:value="${globalMetadataSearchText}">
